--- a/styles.css
+++ b/styles.css
@@ -180,3 +180,45 @@ div.aat-range-element:hover {
 	grid-template-columns: auto 40px;
 	gap: 24px;
 }
+
+.v-nav > ol {
+	display: flex;
+	gap: 24px;
+	width: 100%;
+}
+
+.v-nav > ol {
+	padding: 0;
+}
+
+.v-nav > ol > li {
+	list-style-type: none;
+	padding: 8px 16px;
+	padding-left: 0;
+	font-size: 20px;
+	font-weight: 600;
+	cursor: pointer;
+	border-bottom: 1px solid var(--color-base-30);
+	opacity: 0.8;
+	text-align: center;
+	transition: 150ms ease-in-out;
+}
+
+.v-nav > ol > li:hover:not(.v-nav-selected-route) {
+	opacity: 0.9;
+}
+
+.v-nav > ol > li.v-nav-selected-route {
+	opacity: 1;
+	color: var(--color-accent);
+}
+
+.v-enter-active,
+.v-leave-active {
+	transition: opacity 0.15s ease-in-out;
+}
+
+.v-enter-from,
+.v-leave-to {
+	opacity: 0;
+}
