31 feature use hour and minutes in modern calendar (#44)
* chore: dependencies update

* chore: upgraded build chain

* chore: removed un-maintanable tests :<

sadly the setup ain't really vue test friendly, too bad

* feat: preped for the incomming date token upgrade

right now all systems are the same

* tests: tested new utils function

* chore: updated outdated variable naming and it's jsdoc

* feat: addded uncompleted step for date token configuration

* tests: more unit

* chore: packages updates

* chore: updated import after rebase

* feat: added crude control of default tokens

* feat: finalized the advanced token configuration and the re-sync method when changing tokens

* chore: added lodash.clonedeep

* chore: added lodash.clonedeep types

* feat: string date token handled

* chore: updated wording

* chore: package upgrade

* test: added test case for getNoteTags

* fix: type issues and unhandled module in the settings flow

* chore: removed generated file

* Update README.md

* chore: obsidian plugin version bump

* chore: removed one lodash.clonedeep too many

* chore: re-added lodash.clonedeep but as dev dependency

* chore: cleaner build, also left root main.css to not break fresh builds

---------

Co-authored-by: April <april@groover.co>

--- a/src/main.css
+++ b/src/main.css
@@ -7,6 +7,8 @@ If your plugin does not need CSS, delete this file.
 
 */
 
+@import "../main.css";
+
 .aat-root-container {
 	container-type: inline-size;
 	container-name: root;
@@ -233,4 +235,16 @@ div.aat-range-element:hover {
 .v-enter-from,
 .v-leave-to {
 	opacity: 0;
+}
+
+.v-warning-block {
+	background-color: rgba(var(--color-yellow-rgb), 0.15);
+	border-radius: 8px;
+	margin: 0px;
+	padding: 16px 24px;
+}
+
+.v-warning-block > figcaption {
+	font-size: 20px;
+	font-weight: 600;
 }
