feat: cleanup and polishing
- better single event card display.
- tag matching for inline note more accurate.

--- a/src/main.css
+++ b/src/main.css
@@ -116,6 +116,7 @@ div.aat-card-body {
 	display: -webkit-box;
 	margin: 0;
 	color: var(--text-normal);
+	height: fit-content;
 }
 
 h4.aat-card-start-date {
