--- a/src/main.css
+++ b/src/main.css
@@ -116,6 +116,7 @@ div.aat-card-body {
 	display: -webkit-box;
 	margin: 0;
 	color: var(--text-normal);
+	height: fit-content;
 }
 
 h4.aat-card-start-date {
@@ -170,6 +171,11 @@ div.aat-range-element:hover {
 	display: grid;
 	grid-template-columns: 1fr;
 	gap: 24px;
+}
+
+.v-grid-display.slim,
+.v-grid-display-2.slim {
+	gap: 8px;
 }
 
 .v-grid-display-2 {
@@ -247,4 +253,8 @@ div.aat-range-element:hover {
 .v-warning-block > figcaption {
 	font-size: 20px;
 	font-weight: 600;
+}
+
+h2.v-header {
+	margin: 0px !important;
 }
